Fixed APA citations...

--- a/Results.tex
+++ b/Results.tex
@@ -3,7 +3,7 @@
 %% CHAPTER
 \chapter{Results}
 \label{ch:results}
-This chapter is separated into four sections. The first section explains the data collection process, giving some details about the kind of measurements taken in the field. Also, it includes a summary of the data collected as part of this research. The second section gives a brief description of the lab measurements. The atmospheric correction section shows results from the MoB-ELM atmospheric correction method, and a comparison with {\it in situ} measurements and products from the standard atmospheric correction algorithms based on \cite{Gordon:1994}. Finally, the last section shows the results from the developed CPA retrieval over the area of study, and a comparison with the NASA's bio-optical product for $C_a$ and {\it in situ} measurements.
+This chapter is separated into four sections. The first section explains the data collection process, giving some details about the kind of measurements taken in the field. Also, it includes a summary of the data collected as part of this research. The second section gives a brief description of the lab measurements. The atmospheric correction section shows results from the MoB-ELM atmospheric correction method, and a comparison with {\it in situ} measurements and products from the standard atmospheric correction algorithms based on \citep{Gordon:1994}. Finally, the last section shows the results from the developed CPA retrieval over the area of study, and a comparison with the NASA's bio-optical product for $C_a$ and {\it in situ} measurements.
 % ------------------------------
 \section{Data Collection}
 An example of a Landsat 8 image that includes the area of study is illustrated in \autoref{fig:L8Image130919}.(a) with the study area indicated with a blue box. This Landsat 8 image was acquired on 09-19-2013 (scene LC80160302013262LGN00). This area includes part of Lake Ontario, the Genesee River, Irondequoit Bay and some nearby ponds (Long Pond and Cranberry Pond) (\autoref{fig:L8Image130919}.(b)). This area of study was chosen because of the very wide range of constituents between the ponds and the open water in the lake, which provides a very stressing case for the retrieval (\S\ref{subsec:areaofstudy}). \autoref{fig:0910913Sites} shows a zoom over this area of study for the data collection done on 09-19-2013  with the different sites as an example. In general, the data collections are divided into two crews. One crew, named ``Lake crew'', is in charge of the Irondequoit Bay, Ontario near shore, Ontario off shore, Genesee River plume, Genesee River pier sites (labeled in \autoref{fig:0910913Sites} as IBayN, OntNS, OntOS, RvrPLM and RvrPIER, respectively). The other crew, named ``Ponds crew'', is in charge of the Long Pond north and south, Cranberry Pond sites (labeled in \autoref{fig:0910913Sites} as LongN, LongS and Cranb, respectively).
@@ -88,7 +88,7 @@ Water samples are collected for each site in dark Nalgene bottles (see Appendix~
 
 % ------------------------------
 \section{Laboratory Measurements}
-After collection, these water samples were analyzed in the lab at the Rochester Institute of Technology (RIT), and concentration and IOPs for each CPA were measured following the procedures described by \cite{Mueller1995} (see Appendix~\ref{ch:labmea} for more details about lab measurements). These measurements are utilized as input to Ecolight for the \gls{lut} generation of the retrieval process and the black pixel determination for the MoB-ELM atmospheric correction algorithm. Also, some are utilized for validation of the retrieval process. The $C_a$ and $TSS$ measurements were validated by comparing with measurements analyzed by a credible lab (Monroe County Environmental Laboratory). This comparison between labs showed agreement in the measurements. \autoref{tab:collect} shows the measurements available. Examples of IOPs measured in the lab from the 09-19-13 collection for chlorophyll, CDOM and minerals are shown in \autoref{fig:IOPastLONGS}.
+After collection, these water samples were analyzed in the lab at the Rochester Institute of Technology (RIT), and concentration and IOPs for each CPA were measured following the procedures described by \citep{Mueller1995} (see Appendix~\ref{ch:labmea} for more details about lab measurements). These measurements are utilized as input to Ecolight for the \gls{lut} generation of the retrieval process and the black pixel determination for the MoB-ELM atmospheric correction algorithm. Also, some are utilized for validation of the retrieval process. The $C_a$ and $TSS$ measurements were validated by comparing with measurements analyzed by a credible lab (Monroe County Environmental Laboratory). This comparison between labs showed agreement in the measurements. \autoref{tab:collect} shows the measurements available. Examples of IOPs measured in the lab from the 09-19-13 collection for chlorophyll, CDOM and minerals are shown in \autoref{fig:IOPastLONGS}.
 
 \begin{figure}[htb!]
     \begin{minipage}[c]{0.48\linewidth}
@@ -149,7 +149,7 @@ The \gls{mobelm}\index{atmospheric correction!MoB-ELM} atmospheric correction al
 
 Results of the MoB-ELM atmospheric correction method for different water bodies in the Rochester Embayment area are shown in \autoref{fig:waterpxs}. This figure shows the spectrum of the water pixels in water-leaving reflectance ($\rho_w=\pi R_{rs}$) values after applying the MoB-ELM atmospheric correction. These curves exhibit shapes that correspond with the shapes of typical water pixels. 
 
-\autoref{fig:refcomp} shows water water-leaving reflectance spectra as results from the MoB-ELM method (solid lines) compared with results from a traditional ELM method (dashed lines) for four different ROIs in the Rochester Embayment area (Cranberry Pond, Long Pond, and nearshore and offshore of the Lake Ontario, labeled as Cranb, LongS, OntNS and OntOS in \autoref{fig:0910913Sites}, respectively). The traditional ELM in this case is considered the ideal case: when reflectance measurements for both the dark and bright pixels are known. The traditional ELM method (\S\ref{sec:ELM}) was performed with reflectance measurements taken in the field using the SVC instrument \cite{SVCHR1024i} (Appendix~\ref{ch:fieldmea}). A reflectance measurement taken of the sand of Charlotte Beach, Rochester, NY (labeled as SandDry in \autoref{fig:0910913Sites}) was used for the bright pixel while a water-leaving reflectance measurement taken at the site OntNS was used for the dark pixel. The radiance values were taken from the corresponding ROIs in the Landsat 8 image. As can be seen in \autoref{fig:refcomp}, the atmospheric correction algorithm proposed in this study exhibits less than one percent reflectance unit ($<0.01\Rightarrow <1\%$) of difference in comparison to the results from the traditional ELM algorithm, which is the ideal case (ground-truth). \todo{Dr. Schott: check last sentences!}The traditional \gls{elm} algorithm is not used in this research because we are trying to avoid the need for ground-truth data. Also, the \gls{mobelm} algorithm is more powerful for the final \gls{lut} analysis because if forces the atmospherically corrected data look like the data from the Ecolight in the \gls{lut}, accounting for uncertainties and mismatching between ground-truth and the Ecolight model.
+\autoref{fig:refcomp} shows water water-leaving reflectance spectra as results from the MoB-ELM method (solid lines) compared with results from a traditional ELM method (dashed lines) for four different ROIs in the Rochester Embayment area (Cranberry Pond, Long Pond, and nearshore and offshore of the Lake Ontario, labeled as Cranb, LongS, OntNS and OntOS in \autoref{fig:0910913Sites}, respectively). The traditional ELM in this case is considered the ideal case: when reflectance measurements for both the dark and bright pixels are known. The traditional ELM method (\S\ref{sec:ELM}) was performed with reflectance measurements taken in the field using the SVC instrument \citep{SVCHR1024i} (Appendix~\ref{ch:fieldmea}). A reflectance measurement taken of the sand of Charlotte Beach, Rochester, NY (labeled as SandDry in \autoref{fig:0910913Sites}) was used for the bright pixel while a water-leaving reflectance measurement taken at the site OntNS was used for the dark pixel. The radiance values were taken from the corresponding ROIs in the Landsat 8 image. As can be seen in \autoref{fig:refcomp}, the atmospheric correction algorithm proposed in this study exhibits less than one percent reflectance unit ($<0.01\Rightarrow <1\%$) of difference in comparison to the results from the traditional ELM algorithm, which is the ideal case (ground-truth). \todo{Dr. Schott: check last sentences!}The traditional \gls{elm} algorithm is not used in this research because we are trying to avoid the need for ground-truth data. Also, the \gls{mobelm} algorithm is more powerful for the final \gls{lut} analysis because if forces the atmospherically corrected data look like the data from the Ecolight in the \gls{lut}, accounting for uncertainties and mismatching between ground-truth and the Ecolight model.
 
 \begin{figure}[htb]
     \centering
@@ -168,30 +168,30 @@ Results of the MoB-ELM atmospheric correction method for different water bodies 
 % - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 
 \subsection{Comparison with the Gordon and Wang approach}
 \label{subsec:GordonComp}
-The results from the MoB-ELM algorithm were compared with three different products based on \cite{Gordon:1994}: 1) the \cite{Gordon:1994} approach implemented in the \gls{seadas} tool and 2) the \cite{Gordon:1994} approach implemented in the \gls{acolite} tool, and 3) the \cite{Ruddick:2000bs} approach implemented in \gls{seadas}. The following section explains how this algorithm were applied to the Landsat 8 imagery.
+The results from the MoB-ELM algorithm were compared with three different products based on \citep{Gordon:1994}: 1) the \citep{Gordon:1994} approach implemented in the \gls{seadas} tool and 2) the \citep{Gordon:1994} approach implemented in the \gls{acolite} tool, and 3) the \citep{Ruddick:2000bs} approach implemented in \gls{seadas}. The following section explains how this algorithm were applied to the Landsat 8 imagery.
 % -.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.
 \subsubsection{SeaDAS-SWIR}
 \label{subsubsec:seadasswir}
-The second method analyzed in this work was the \cite{Gordon:1994} approach for atmospherically correcting satellite data over water, hereafter SeaDAS-SWIR. This method is implemented in the l2gen tool of the the \gls{seadas} software package described in \S\ref{subsec:seadasrrs}.
+The second method analyzed in this work was the \citep{Gordon:1994} approach for atmospherically correcting satellite data over water, hereafter SeaDAS-SWIR. This method is implemented in the l2gen tool of the the \gls{seadas} software package described in \S\ref{subsec:seadasrrs}.
 
 % The l2gen tool processes heritage Ocean-Color sensor (e.g. MODIS, SeaWiFS, OCTS or CZCS) data (Level 1) and generates Level 2 geophysical products by applying atmospheric corrections and bio-optical algorithms to the sensor. 
 
-As mentioned previously, the atmospheric correction methods based on the Gordon and Wang approach use standard radiative transfer methods to compute and remove scattering by the air molecules, and two bands where the water contribution is negligible to estimate the aerosol contribution for the rest of the bands. Formerly, two NIR bands were used for estimating the aerosol contribution, but a combination of NIR and SWIR bands could be used when there is some water contribution in the NIR wavelengths \cite{Wang2009}. For this analysis, The bands used for the atmospheric correction were OLI's SWIR 1 and SWIR 2 bands (band 6 and 7). The OLI's NIR band was not used because the water contribution in the NIR band cannot be considered negligible due to the presence of highly turbid waters in the scene (e.g. ponds and river plume). Water has much stronger absorption at the SWIR wavelengths than at the NIR wavelengths. 
+As mentioned previously, the atmospheric correction methods based on the Gordon and Wang approach use standard radiative transfer methods to compute and remove scattering by the air molecules, and two bands where the water contribution is negligible to estimate the aerosol contribution for the rest of the bands. Formerly, two NIR bands were used for estimating the aerosol contribution, but a combination of NIR and SWIR bands could be used when there is some water contribution in the NIR wavelengths \citep{Wang2009}. For this analysis, The bands used for the atmospheric correction were OLI's SWIR 1 and SWIR 2 bands (band 6 and 7). The OLI's NIR band was not used because the water contribution in the NIR band cannot be considered negligible due to the presence of highly turbid waters in the scene (e.g. ponds and river plume). Water has much stronger absorption at the SWIR wavelengths than at the NIR wavelengths. 
 
-A full description of the OLI's processing in SeaDAS is described in \cite{Franz:2015}. The processing in SeaDAS includes a vicarious calibration derived from the marine optical buoy (MOBY) near Lanai, Hawaii. For the atmospheric correction in SeaDAS, the option used in this study was the operational atmospheric correction scheme ({\tt aer\_opt=-2}), with the shortest and longest sensor wavelength for aerosol models selection equal to band 6 and band 7 ({\tt aer\_wave\_short=1609} and {\tt aer\_wave\_long=2201}). Since a default land/water mask fine enough to resolve the ponds in the scene is not included in SeaDAS, all the pixels were forced to be processed as ocean ({\tt proc\_ocean=2}) and the land mask was set to the ``{\tt landmask\_null.dat}'' file. Additionally, in order to increase the SNR of SWIR bands and avoid $R_{rs}$ retrieval failing in the ponds, the SWIR bands were spatially averaged with a 5x5 window. This was accomplished by including a filter ({\tt filter\_opt=1}) and modifying the default SeaDAS's file ``{\tt msl12\_filter.dat}''.
+A full description of the OLI's processing in SeaDAS is described in \citep{Franz:2015}. The processing in SeaDAS includes a vicarious calibration derived from the marine optical buoy (MOBY) near Lanai, Hawaii. For the atmospheric correction in SeaDAS, the option used in this study was the operational atmospheric correction scheme ({\tt aer\_opt=-2}), with the shortest and longest sensor wavelength for aerosol models selection equal to band 6 and band 7 ({\tt aer\_wave\_short=1609} and {\tt aer\_wave\_long=2201}). Since a default land/water mask fine enough to resolve the ponds in the scene is not included in SeaDAS, all the pixels were forced to be processed as ocean ({\tt proc\_ocean=2}) and the land mask was set to the ``{\tt landmask\_null.dat}'' file. Additionally, in order to increase the SNR of SWIR bands and avoid $R_{rs}$ retrieval failing in the ponds, the SWIR bands were spatially averaged with a 5x5 window. This was accomplished by including a filter ({\tt filter\_opt=1}) and modifying the default SeaDAS's file ``{\tt msl12\_filter.dat}''.
 % -.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.
 \subsubsection{Acolite-SWIR}
-The third atmospheric correction method analyzed was the implementation of the \cite{Gordon:1994} approach in the \gls{acolite} tool (\S\ref{subsec:acolite}). \gls{acolite} was used as a clone for the SeaDAS-SWIR method described above in \S~\ref{subsubsec:seadasswir}. Therefore, the option used was the default ``SWIR atmospheric correction'' with the ``Franz Ave'' gains for the vicarious calibration \cite{Franz:2015}.
+The third atmospheric correction method analyzed was the implementation of the \citep{Gordon:1994} approach in the \gls{acolite} tool (\S\ref{subsec:acolite}). \gls{acolite} was used as a clone for the SeaDAS-SWIR method described above in \S~\ref{subsubsec:seadasswir}. Therefore, the option used was the default ``SWIR atmospheric correction'' with the ``Franz Ave'' gains for the vicarious calibration \citep{Franz:2015}.
 % -.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.
 \subsubsection{SeaDAS-MUMM}
-The fourth method evaluated in this work was the atmospheric correction approach developed by \cite{Ruddick:2000bs}, hereafter SeaDAS-MUMM (\acrfull{mumm}). This method is a modification of \cite{Gordon:1994}'s algorithm for use over turbid coastal and inland waters (Case 2) or high productive Case 1 waters. In this study, this method was applied using its implementation available in SeaDAS ({\tt aer\_opt=-10}), using bands 4 and 5 and setting the calibration parameter $\alpha=8.7$ for OLI, as suggested by \cite{Vanhellemont2014} and \cite{Vanhellemont2014a}. 
+The fourth method evaluated in this work was the atmospheric correction approach developed by \citep{Ruddick:2000bs}, hereafter SeaDAS-MUMM (\acrfull{mumm}). This method is a modification of \citep{Gordon:1994}'s algorithm for use over turbid coastal and inland waters (Case 2) or high productive Case 1 waters. In this study, this method was applied using its implementation available in SeaDAS ({\tt aer\_opt=-10}), using bands 4 and 5 and setting the calibration parameter $\alpha=8.7$ for OLI, as suggested by \citep{Vanhellemont2014} and \citep{Vanhellemont2014a}. 
           % -10: Multi-scattering with MUMM correction
           %      and MUMM NIR calculation
 
 % -.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.
 \subsubsection{\texorpdfstring{$R_{rs}$}{Rrs} Comparison Results}
 
-The $R_{rs}$ products from the four atmospheric correction methods described in the previous section (MoB-ELM, SeDAS-SWIR, Acolite-SWIR and SeaDAS-MUMM) are compared in this section. These algorithm were applied to the 09-19-2013 Landsat 8 image (\autoref{fig:0910913Sites}). A mask was created to mask out all pixels but water pixels. This mask was created by thresholding the Landsat 8's SWIR 2 band (\S\ref{sec:prepro}). \autoref{fig:Rrs443_482} shows the $R_{rs}$ values for $443nm$ (a-d) and $482nm$ (e-h), and \autoref{fig:Rrs561_655} for $561nm$ (a-d) and $655nm$ (e-h) for these four atmospheric correction methods. When analyzed visually, the similarities among the methods are higher in band 3 and 4 than band 1 and 2. For all bands, SeaDAS-SWIR and SeaDAS-MUMM look similar in both the lake and ponds. Also, the SeaDAS-SWIR method exhibits some noise across all bands. This is caused due to the low SNR in SWIR bands and averaging used for applying the \cite{Gordon:1994} atmospheric correction in \gls{seadas}.  Note that there are some bottom effect in the lake's shoreline causing all methods to retrieve high $R_{rs}$ in those areas, which is not the case. This should be taken in account for future processing by masking the areas where the water is clear enough that the bottom can be seen or incorporating bottom effects in the \gls{lut}.
+The $R_{rs}$ products from the four atmospheric correction methods described in the previous section (MoB-ELM, SeDAS-SWIR, Acolite-SWIR and SeaDAS-MUMM) are compared in this section. These algorithm were applied to the 09-19-2013 Landsat 8 image (\autoref{fig:0910913Sites}). A mask was created to mask out all pixels but water pixels. This mask was created by thresholding the Landsat 8's SWIR 2 band (\S\ref{sec:prepro}). \autoref{fig:Rrs443_482} shows the $R_{rs}$ values for $443nm$ (a-d) and $482nm$ (e-h), and \autoref{fig:Rrs561_655} for $561nm$ (a-d) and $655nm$ (e-h) for these four atmospheric correction methods. When analyzed visually, the similarities among the methods are higher in band 3 and 4 than band 1 and 2. For all bands, SeaDAS-SWIR and SeaDAS-MUMM look similar in both the lake and ponds. Also, the SeaDAS-SWIR method exhibits some noise across all bands. This is caused due to the low SNR in SWIR bands and averaging used for applying the \citep{Gordon:1994} atmospheric correction in \gls{seadas}.  Note that there are some bottom effect in the lake's shoreline causing all methods to retrieve high $R_{rs}$ in those areas, which is not the case. This should be taken in account for future processing by masking the areas where the water is clear enough that the bottom can be seen or incorporating bottom effects in the \gls{lut}.
 
 %^^^^^^^^^^^^^^^^^^^  FIGURE ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 \begin{figure}[htb!]
@@ -806,7 +806,7 @@ This section displays the results from the main output of this research: the dev
 % ------------ added from SPIE SD
 \subsection{Results from the Spectral-Matching and LUT Approach}
 \label{subsec:LUTapproach}
-The developed retrieval algorithm \cite{Concha2013IGARSS} was applied to the 09-19-2013 scene (\autoref{fig:0910913Sites}). As described in \S\ref{sec:retrieval}, this algorithm uses a spectrum-matching and \gls{lut} methodology to extract CPA concentrations from $R_{rs}$ data. A LUT of $R_{rs}$ spectra is created in Ecolight (\S\ref{sec:hydrolight}) with \gls{iops} and CPA concentrations measured in the field as inputs. The parameters used to create this LUT are shown in \autoref{tab:LUTconc}. These parameters are chlorophyll-{\it a} ($C_a$), total suspended solid ($TSS$), CDOM absorption coefficient at $\lambda=440nm$ ($a_{CDOM}(440nm)$), and the backscatter fraction ($b_b/b$) for the scattering phase function selection. The backscatter fraction was determined as described in \S\ref{subsec:mobelm}, page \pageref{pag:phasefn}.
+The developed retrieval algorithm \citep{Concha2013IGARSS} was applied to the 09-19-2013 scene (\autoref{fig:0910913Sites}). As described in \S\ref{sec:retrieval}, this algorithm uses a spectrum-matching and \gls{lut} methodology to extract CPA concentrations from $R_{rs}$ data. A LUT of $R_{rs}$ spectra is created in Ecolight (\S\ref{sec:hydrolight}) with \gls{iops} and CPA concentrations measured in the field as inputs. The parameters used to create this LUT are shown in \autoref{tab:LUTconc}. These parameters are chlorophyll-{\it a} ($C_a$), total suspended solid ($TSS$), CDOM absorption coefficient at $\lambda=440nm$ ($a_{CDOM}(440nm)$), and the backscatter fraction ($b_b/b$) for the scattering phase function selection. The backscatter fraction was determined as described in \S\ref{subsec:mobelm}, page \pageref{pag:phasefn}.
 
 \begin{table}[htb]
 \caption{Input parameters for the LUT generation in Ecolight for the Landsat 8 image acquired on 09-19-2013. These parameters are inherent optical properties (IOPs) for the lake (ONTNS) and the ponds (LONGS), chlorophyll-{\it a} ($C_a$), total suspended solid ($TSS$), CDOM absorption coefficient at $\lambda=440nm$ ($a_{CDOM}(440nm)$), and the backscatter fraction ($b_b/b$). \label{tab:LUTconc}} 
@@ -980,7 +980,7 @@ The numerical results for the retrieval are summarized in \autoref{fig:RMSE} whe
   NRMSE =\frac{\sqrt{\frac{1}{N}\sum_{n=1}^N{\left[C_{ret}(n) - C_{mea}(n)\right]^2}}}{max\{C_{mea}(n)\} - min\{C_{mea}(n)\}}\times100 ~[\%]
 \end{equation}
 
-\noindent where $C_{ret}$ is the retrieved CPA concentration (i.e. $C_a$, $TSS$ or $a_{CDOM}(440nm)$), $C_{mea}$ is the measured CPA concentration, and $n=1,...,N$ is the $n$th site from a total of $N=9$ sites for both days. The {\it in situ} dataset used for the \gls{nrmse} calculation included the sites utilized for the MoB-ELM algorithm, .i.e. the dark (ONTOS) pixel for the 2013 scene and the dark (ONTOS) and bright (CRANB) pixels for the 2014 scene. The \gls{nrmse} are approximately $10\%$ for $C_a$ and $TSS$, and about $5\%$ for $a_{CDOM}(440nm)$. These errors are consistent with the expected errors reported by \cite{Gerace:2013}. 
+\noindent where $C_{ret}$ is the retrieved CPA concentration (i.e. $C_a$, $TSS$ or $a_{CDOM}(440nm)$), $C_{mea}$ is the measured CPA concentration, and $n=1,...,N$ is the $n$th site from a total of $N=9$ sites for both days. The {\it in situ} dataset used for the \gls{nrmse} calculation included the sites utilized for the MoB-ELM algorithm, .i.e. the dark (ONTOS) pixel for the 2013 scene and the dark (ONTOS) and bright (CRANB) pixels for the 2014 scene. The \gls{nrmse} are approximately $10\%$ for $C_a$ and $TSS$, and about $5\%$ for $a_{CDOM}(440nm)$. These errors are consistent with the expected errors reported by \citep{Gerace:2013}. 
 
 %^^^^^^^^^^^^^^^^^^^  FIGURE ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 \begin{figure}[htb]
@@ -995,7 +995,7 @@ The numerical results for the retrieval are summarized in \autoref{fig:RMSE} whe
 % -----------------------------------------------------------
 \subsection{Comparison with the Bio-Optical Algorithm for \texorpdfstring{$C_a$}{Ca} Retrieval}
 \label{subsec:bioopticalapproach}
-In order to compare the results from the developed CPA concentration retrieval with the standard products, the NASA's \gls{oc3} algorithm \cite{OReilly2000} was applied to the $R_{rs}$ data from 09-19-2013 Landsat 8 scene, as suggested by \cite{Franz:2015}. The \gls{oc3} algorithm is a three-band empirical $R_{rs}(\lambda)$ band ratio algorithm. Band ratio algorithms try to find a good fit between a band ratio $R$ and $C_a$, as described in \S\ref{subsec:chlempirical}. The chlorophyll-{\it a} results from the OC3 algorithm were obtained from the l2gen tool in SeaDAS (\S\ref{subsec:chlempirical}) when the SeaDAS-SWIR and SeaDAS-MUMM results from the previous section (\S\ref{subsec:GordonComp}) were generated. Additionally, The OC3 algorithm was applied to the Acolite-SWIR results using the band math tool in SeaDAS. For the OLI case, the OC3 algorithm uses band 1 ($443nm$) or band 2 ($483nm$), and band 3 ($561nm$) for the band ratio, i.e.
+In order to compare the results from the developed CPA concentration retrieval with the standard products, the NASA's \gls{oc3} algorithm \citep{OReilly2000} was applied to the $R_{rs}$ data from 09-19-2013 Landsat 8 scene, as suggested by \citep{Franz:2015}. The \gls{oc3} algorithm is a three-band empirical $R_{rs}(\lambda)$ band ratio algorithm. Band ratio algorithms try to find a good fit between a band ratio $R$ and $C_a$, as described in \S\ref{subsec:chlempirical}. The chlorophyll-{\it a} results from the OC3 algorithm were obtained from the l2gen tool in SeaDAS (\S\ref{subsec:chlempirical}) when the SeaDAS-SWIR and SeaDAS-MUMM results from the previous section (\S\ref{subsec:GordonComp}) were generated. Additionally, The OC3 algorithm was applied to the Acolite-SWIR results using the band math tool in SeaDAS. For the OLI case, the OC3 algorithm uses band 1 ($443nm$) or band 2 ($483nm$), and band 3 ($561nm$) for the band ratio, i.e.
 
 \begin{equation}
 \begin{gathered}
