--- a/Summary.tex
+++ b/Summary.tex
@@ -11,7 +11,7 @@ This chapter includes a summary of this research, some discussions about the met
 
 % ------------------------------
 \subsection{MoB-ELM}
-Applying the atmospheric correction algorithms based on \cite{Gordon:1994} to the Landsat 8 imagery could present some limitations such as noisy product when using the \gls{swir} bands over highly turbid waters with water-leaving signal in the \gls{nir}. The \gls{mobelm} atmospheric correction algorithm \cite{Concha2014SPIE} was developed as an alternative to overcome these limitations. Also, the MoB-ELM algorithm is not exclusive for Landsat 8 imagery. It could be applied to any type of sensor.
+Applying the atmospheric correction algorithms based on \citet{Gordon:1994} to the Landsat 8 imagery could present some limitations such as noisy product when using the \gls{swir} bands over highly turbid waters with water-leaving signal in the \gls{nir}. The \gls{mobelm} atmospheric correction algorithm was developed as an alternative to overcome these limitations \citep{Concha2014SPIE}. Also, the MoB-ELM algorithm is not exclusive for Landsat 8 imagery. It could be applied to any type of sensor.
 
 The \gls{mobelm} algorithm tries to avoid the use of field reflectance ground-truth as commonly used in the traditional \gls{elm} method. However, it is recommended to use the \gls{elm} whenever possible, i.e. when {\it in situ} information about the bright and dark target is available. As a review, in the MoB-ELM, the bright pixel is obtained from either the Landsat reflectance product over a bright target in the scene or from an Ecolight run simulating a water body with high concentration of CPAs in the scene. The dark pixel is obtained from an Ecolight run simulating a water body with low concentration of CPAs present in the scene. This algorithm does not require zero water signal in the NIR bands, so it could be applied to highly turbid waters. This algorithm assumes that the atmosphere is the same over the area of study.
 
@@ -19,13 +19,13 @@ The \gls{mobelm} algorithm tries to avoid the use of field reflectance ground-tr
 The MoB-ELM algorithm was applied to {three \todo{three?}} Landsat 8 images in order to test the retrieval algorithm. Although, only the \gls{rrs} results from the 2013 image were compared with {\it in situ} data for validation. First, the results were compared with the traditional \gls{elm} algorithm using the ground-truth data for the dark and bright pixel. This comparison included the spectra of four sites in the scene. The difference is less than one reflectance unit (i.e. one percentage point). 
 
 % Mention this:
-% One problem with using the Gordon and Wang approach on Landsat 8 imagery is that it requires a sufficient \gls{snr} over water in order to discriminate the water-leaving signal from the instrument noise. This could be particular important for OLI since it has a noisy SWIR bands, and so derived ocean color products that use these bands for the aerosol determination can be noisy \cite{Vanhellemont2014a}.
+% One problem with using the Gordon and Wang approach on Landsat 8 imagery is that it requires a sufficient \gls{snr} over water in order to discriminate the water-leaving signal from the instrument noise. This could be particular important for OLI since it has a noisy SWIR bands, and so derived ocean color products that use these bands for the aerosol determination can be noisy \citep{Vanhellemont2014a}.
 
 % ----- added From SPIE SD
 % \subsection{Comparison with Standard Algorithms}
-\todo{include rest of the images in the NRMSE calculation for Rrs}For further validation, the \gls{mobelm} algorithm was compared with three algorithms utilizing the NASA's standard algorithms based on the methods developed by \cite{Gordon:1994}. The \gls{rrs} retrieved from these atmospheric correction algorithms were compared against each other. There are better agreements in band 3 and 4 than in bands 1 and 2 for all algorithms, which can be concluded from the RMSE values (\autoref{tab:Sites}). Also, the spectral \gls{rrs} from all four algorithms were compared with coincident {\it in situ} data. This comparison showed that the \gls{mobelm} algorithm perform the best overall.  When compared with {\it in situ} data, the MoB-ELM and Gordon and Wang's algorithm from SeaDAS (SeaDAS-SWIR) show similar results for all bands (\autoref{fig:NRMSE130919_RRS}). The results from the Gordon and Wang's algorithm from Acolite (Acolite-SWIR) shows the largest disagreement (\autoref{fig:NRMSE130919_RRS}). Then, the \gls{nrmse} for each band was calculated using the {\it in situ} data from the 09-19-2013 scene. Again, the \gls{mobelm} algorithm performs the best overall.
+\todo{include rest of the images in the NRMSE calculation for Rrs}For further validation, the \gls{mobelm} algorithm was compared with three algorithms utilizing the NASA's standard algorithms based on the methods developed by \citep{Gordon:1994}. The \gls{rrs} retrieved from these atmospheric correction algorithms were compared against each other. There are better agreements in band 3 and 4 than in bands 1 and 2 for all algorithms, which can be concluded from the RMSE values (\autoref{tab:Sites}). Also, the spectral \gls{rrs} from all four algorithms were compared with coincident {\it in situ} data. This comparison showed that the \gls{mobelm} algorithm perform the best overall.  When compared with {\it in situ} data, the MoB-ELM and Gordon and Wang's algorithm from SeaDAS (SeaDAS-SWIR) show similar results for all bands (\autoref{fig:NRMSE130919_RRS}). The results from the Gordon and Wang's algorithm from Acolite (Acolite-SWIR) shows the largest disagreement (\autoref{fig:NRMSE130919_RRS}). Then, the \gls{nrmse} for each band was calculated using the {\it in situ} data from the 09-19-2013 scene. Again, the \gls{mobelm} algorithm performs the best overall.
 
-\todo{Dr.Schott: check this paragraph!}The study of coastal water includes an extra signal not taken into account in the remote sensing of the open ocean: adjacency effect product of the bright targets represented by the shoreline. This effect is not taken into account in the \cite{Gordon:1994} approach. However, it needs to be analyzed to know how much influence it could have in the sensor-reaching signal. Fortunately, the MoB-ELM algorithm inherently takes care of this signal since the reflectance values are taken at the surface and they represent ground-truth.
+\todo{Dr.Schott: check this paragraph!}The study of coastal water includes an extra signal not taken into account in the remote sensing of the open ocean: adjacency effect product of the bright targets represented by the shoreline. This effect is not taken into account in the \citep{Gordon:1994} approach. However, it needs to be analyzed to know how much influence it could have in the sensor-reaching signal. Fortunately, the MoB-ELM algorithm inherently takes care of this signal since the reflectance values are taken at the surface and they represent ground-truth.
 
 % Glint and adjacency effects were also not addressed in this work, and they could affect the atmospheric correction.
 
@@ -38,7 +38,7 @@ The NASA's standard empirical algorithms (\S\ref{subsec:chlempirical}) for the r
 % copied from RS of Env. paper
 The developed retrieval process was applied to three \todo{tree?} Landsat 8 scenes over the same study area and compared with field measurements. Maps of CPA concentrations show the expected trends of low concentration in the lake and higher concentration in the ponds.  
 
-The retrieval was validated with ground-truth data taken at the same time as the satellite overpass. The $R^2$ value of the regression for all CPAs showed a high correlation ($R^2\geq0.89$). The \gls{nrmse} was calculated using the {\it in situ} data from the 2013 and 2014 scenes. The \gls{nrmse} are approximately $10\%$ for $C_a$ and $TSS$, and about $5\%$ for $a_{CDOM}(440nm)$. The comparison with field measurements exhibit error comparable with previous performance predictions for Landsat 8 \cite{Gerace:2013}. These retrieval results are promising for the use of Landsat 8 for monitoring of coastal and inland waters showing good quantitative agreement across a very wide range of concentrations.
+The retrieval was validated with ground-truth data taken at the same time as the satellite overpass. The $R^2$ value of the regression for all CPAs showed a high correlation ($R^2\geq0.89$). The \gls{nrmse} was calculated using the {\it in situ} data from the 2013 and 2014 scenes. The \gls{nrmse} are approximately $10\%$ for $C_a$ and $TSS$, and about $5\%$ for $a_{CDOM}(440nm)$. The comparison with field measurements exhibit error comparable with previous performance predictions for Landsat 8 \citep{Gerace:2013}. These retrieval results are promising for the use of Landsat 8 for monitoring of coastal and inland waters showing good quantitative agreement across a very wide range of concentrations.
 
 The next step was to compare the developed retrieval algorithm with the standard algorithms. The \gls{oc3} algorithm was applied to results from the SeaDAS-SWIR, Acolite-SWIR and SeaDAS-MUMM atmospheric correction algorithms in order to retrieve chlorophyll-{\it a} concentrations ($C_a$). The $C_a$ maps (\autoref{fig:chlor_amaps}) exhibit similar results in the lake, but large disagreement in the ponds. Furthermore, all these four retrievals are compared among them through scatter plots and a week correlation is found (\autoref{fig:13262Chlor})). When the retrieved $C_a$ from the \gls{oc3} algorithm and the developed retrieval are compared with {\it in situ} data, the results from the Concha and Schott approach performed better than the rest of the algorithms, which is reflected in the \gls{nrmse} value (\autoref{fig:NRMSE130919CHL}). Again, this was expected since the ocean color algorithms were developed with the lack of {\it in situ} data representative of Case 2 waters with high concentration of color producing agents (CPAs).
 
@@ -52,7 +52,7 @@ One of the limitation of the developed retrieval algorithm is that the \gls{mobe
 
 Some pixels from the lake shoreline include signal from the bottom causing outliers in the retrieval results since the bottom reflectance was not accounted for in the process. The next version of this retrieval algorithm should address this issue. 
 
-One approach that was not tested in the research is using the results from the traditional \gls{elm}  or MoB-ELM \todo{MoB-ELM only?} algorithms as input to the standard NASA models and investigated whether the retrieval improves or not. On the other hand, the results from the \cite{Gordon:1994} algorithm could be used as input to the developed LUT-based inversion method and investigate if the results improve or not.
+One approach that was not tested in the research is using the results from the traditional \gls{elm}  or MoB-ELM \todo{MoB-ELM only?} algorithms as input to the standard NASA models and investigated whether the retrieval improves or not. On the other hand, the results from the \citep{Gordon:1994} algorithm could be used as input to the developed LUT-based inversion method and investigate if the results improve or not.
 % -------------------------------------
 \section{Future Work}
 \label{sec:futurework}
@@ -66,7 +66,7 @@ Some phenomena affecting the sensor-reaching signal were not included in this re
 
 % ------------------------------
 \subsection{Hydrodynamics models} 
-The results from the retrieval could be used for training hydrodynamics models to predict the water bodies behavior, as suggested by \cite{Pahlevan:2012} and \cite{GeraceThesis}. The spatial resolution of Landsat 8 allows for resolving fine features in the scene such as rivers, and river plumes. Therefore, the hydrodynamics model could be tested and/or calibrated with these data to simulate river and river discharges, for instance.
+The results from the retrieval could be used for training hydrodynamics models to predict the water bodies behavior, as suggested by \citep{Pahlevan:2012} and \citep{GeraceThesis}. The spatial resolution of Landsat 8 allows for resolving fine features in the scene such as rivers, and river plumes. Therefore, the hydrodynamics model could be tested and/or calibrated with these data to simulate river and river discharges, for instance.
 
 % ------------------------------
 \subsection{Investigate New Sensor Enhancements for Future Missions}
