--- a/Thesis_PhD.tex
+++ b/Thesis_PhD.tex
@@ -1,4 +1,4 @@
-\documentclass[oneside,10pt]{book}
+\documentclass[draft,oneside,10pt]{book}
 
 \usepackage{graphicx}
 
@@ -268,7 +268,7 @@
 }
 
 % Added 11-05-15 ----------------------------------------
-% \usepackage[round]{natbib} 
+\usepackage[round]{natbib} 
 % from
 % http://tex.stackexchange.com/questions/117428/get-round-brackets-with-apalike
 % o your preamble. For regular in text citations, use
