--- a/Appendix.tex
+++ b/Appendix.tex
@@ -12,7 +12,7 @@
 This part of the appendix describes how to collect the water samples and how to take the different measurements in the field.
 % -----------------------------------------------------------------------------
 \section{Water Samples}
-\todo{add filtration procedure}The water samples should be taken using Dark Nalgene bottles (or similar) simultaneously with in-water optical measurements \cite{Mitchell2002}.
+\todo{add filtration procedure}The water samples should be taken using Dark Nalgene bottles (or similar) simultaneously with in-water optical measurements \citep{Mitchell2002}.
 
 \subsection{Equipment}
 \subsubsection*{Acquisition}
@@ -60,9 +60,9 @@ This part of the appendix describes how to collect the water samples and how to 
   \item Take a bottle from the cooler and write the bottle label down in the ``Bottle Number'' section on the data sheet along
   \item Rinse the Nalgene Bottle and cap at least 3 times with the water to be sampled before filling
   \item Submerge bottle with the cap on it in an undisturbed location.
-  \item Uncap the submerged bottle  to take subsurface water sample (avoid to take water from the surface) \cite{Montana08} 
+  \item Uncap the submerged bottle  to take subsurface water sample (avoid to take water from the surface) \citep{Montana08} 
   \item Cap the bottle with the bottle still submerged
-  \item Store bottle up-right immediately in the cooler in order to avoid direct sun light \cite{Mueller1995}
+  \item Store bottle up-right immediately in the cooler in order to avoid direct sun light \citep{Mueller1995}
   \item Once off the water, text to Nina or person in charge of the collection for example: ``Safe, Long Pond team''
   \item Take the in-water optical measurements simultaneously
   \item Take water some water samples to the Monroe County Environmental Lab, if applicable.
@@ -80,9 +80,9 @@ Notes:
 % -----------------------------------------------------------------------------
 \section{Remote-sensing Reflectance (\texorpdfstring{$R_{rs}$}{Rrs})}
 
-% method described by \cite{Mobley:1999} for measuring the spectra of the downwelling irradiance $E_d$, the surface reflected sky radiance $L_s$, and the water-leaving radiance $L_w$ for each site 
+% method described by \citet{Mobley:1999} for measuring the spectra of the downwelling irradiance $E_d$, the surface reflected sky radiance $L_s$, and the water-leaving radiance $L_w$ for each site 
 
-This section describes how to take the remote-sensing measurement using a single instrument that measures radiance (spectroradiometer or spectrometer) such as a SVC \cite{SVCHR1024i} or an ASD \cite{ASDManual2012} instrument. This procedure is taken from \cite{Mobley:1999} and \cite{Mueller1995}. 
+This section describes how to take the remote-sensing measurement using a single instrument that measures radiance (spectroradiometer or spectrometer) such as a SVC \citep{SVCHR1024i} or an ASD \citep{ASDManual2012} instrument. This procedure is taken from \citep{Mobley:1999} and \citep{Mueller1995}. 
 
 Recall that the \gls{rrs} (\autoref{eq:Rrs}) is defined as
 
@@ -100,7 +100,7 @@ The term $L_r$ can be replaced by
 \begin{equation}\label{eq:Lsky}
 	L_r = \rho L_{sky}
 \end{equation}
-where $\rho$ is the proportionality factor that relates the radiance measured when the sensor views the sky to the reflected sky radiance measured when the sensor views the water surface. \cite{Mobley:1999} suggests to use $\rho \approx 0.028$ for a sensor view angle $\theta_v \approx 40^\circ$ from the nadir and  $\phi_v \approx 135^\circ$ from the Sun with the constraints of a clear sky and wind speed less than $5m/s$.
+where $\rho$ is the proportionality factor that relates the radiance measured when the sensor views the sky to the reflected sky radiance measured when the sensor views the water surface. \citet{Mobley:1999} suggests to use $\rho \approx 0.028$ for a sensor view angle $\theta_v \approx 40^\circ$ from the nadir and  $\phi_v \approx 135^\circ$ from the Sun with the constraints of a clear sky and wind speed less than $5m/s$.
 
 Although $E_d$ could be measured directly with an appropriate sensor, it will be estimated from the radiance measured from a Lambertian surface (Spectralon) because both instruments in this case (SVC and ASD) are set to measure radiance. When an irradiance $E_d$ falls in a Lambertian surface with a known irradiance reflectance $R_g$, the uniform radiance $L_g$ leaving the surface is given by 
 
@@ -196,11 +196,11 @@ This part of the appendix describes how to take the lab measurements from the wa
 \end{figure}
  %------------- 
 
-% $a_{YS}$ cannot be determined directly. An approximation of $a_{YS}$ may be obtained by a spectrophotometer scan of a filtered sample (\cite{Bukata1995}, p.125). Spectrophotometer used in normal mode do not measure true absorbance but {\color{red} attenuance} because all the scattered light is measured. To overcome this, the cells can be placed close to a wide photomultiplier (\cite{Kirk1983}, p.51).
+% $a_{YS}$ cannot be determined directly. An approximation of $a_{YS}$ may be obtained by a spectrophotometer scan of a filtered sample (\citep{Bukata1995}, p.125). Spectrophotometer used in normal mode do not measure true absorbance but {\color{red} attenuance} because all the scattered light is measured. To overcome this, the cells can be placed close to a wide photomultiplier (\citep{Kirk1983}, p.51).
 % -----------------------------------------------------------------------------
 \section{IOPs}
 %*******************************
-The \gls{iops}, specifically the spectral absorption coefficients, are obtained from spectrophotometric measurements of samples prepared from filtration of water samples. These methods are described by \cite{Mitchell2002}. In brief, the total absorption coefficient for natural water can be defined as \cite{Mitchell2002}
+The \gls{iops}, specifically the spectral absorption coefficients, are obtained from spectrophotometric measurements of samples prepared from filtration of water samples. These methods are described by \citet{Mitchell2002}. In brief, the total absorption coefficient for natural water can be defined as \citep{Mitchell2002}
 \begin{equation}
   a_{total}(\lambda) = a_w(\lambda) + a_p(\lambda) + a_g(\lambda)~~[m^{-1}] 
 \end{equation}
@@ -212,11 +212,11 @@ The \gls{iops}, specifically the spectral absorption coefficients, are obtained 
 
 A dual-beam spectrophotometer is an instrument that measures the amount of light that passes a medium, i.e. transmittance, using two paths, one for the reference, and one for the sample. The spectrophotometer used was a Shimadzu \gls{uv}-\gls{vis} recording spectrophotometer, model UV-2100U. One the output of the instrument is the dimensionless quantity \gls{od} (a.k.a. absorbance). 
 
-The water sample is filtered, and a $OD_{fp}(\lambda)$ is measured using the spectrophotometer. $OD_{fp}(\lambda)$ is a measurement of the \gls{od} of the retained particles. Then, the filter is soaked in chemical solvent to extract phytoplankton pigments \cite{Kishino1985cj}. At this point, the filter only retained the de-pigmented particles, and $OD_{fd}(\lambda)$ is measured. The conversion from \gls{od} to absorption coefficients is \cite{Cleveland1993}
+The water sample is filtered, and a $OD_{fp}(\lambda)$ is measured using the spectrophotometer. $OD_{fp}(\lambda)$ is a measurement of the \gls{od} of the retained particles. Then, the filter is soaked in chemical solvent to extract phytoplankton pigments \citep{Kishino1985cj}. At this point, the filter only retained the de-pigmented particles, and $OD_{fd}(\lambda)$ is measured. The conversion from \gls{od} to absorption coefficients is \citep{Cleveland1993}
 \begin{equation}
   a_p = \frac{\displaystyle 2.3 OD_{susp}(\lambda)}{V/A}
 \end{equation}
-\noindent where 2.3 is a conversion from $\log$ base $10$ to $\log$ base $e$, $V~[m^3]$ is the volume filtered, $A~[m^2]$ is the clearance area of the filter. $OD_{susp}$ is obtained from $OD_{fp}$ or $OD_{fd}$ after a scattering correction for glass-fiber filter proposed by \cite{Cleveland1993} as
+\noindent where 2.3 is a conversion from $\log$ base $10$ to $\log$ base $e$, $V~[m^3]$ is the volume filtered, $A~[m^2]$ is the clearance area of the filter. $OD_{susp}$ is obtained from $OD_{fp}$ or $OD_{fd}$ after a scattering correction for glass-fiber filter proposed by \citet{Cleveland1993} as
 \begin{equation}
    OD_{susp}(\lambda) = 0.378 (OD_{fp}(\lambda)-OD_{fp}(750nm)) + 0.523 (OD_{fp}(\lambda)-OD_{fp}(750nm))^2
  \end{equation} 
@@ -277,7 +277,7 @@ The water sample is filtered, and a $OD_{fp}(\lambda)$ is measured using the spe
   \item Press the Baseline button in the UV-2101PC software
   \item Perform an scanner to see the baseline level of the instrument by pressing the ``Start'' button in the software
   \item Press the ``Go To WL'' button of the software and type $850 [nm]$. Press the ``Auto Zero'' button of the software (optional)
-  \item Shake water sample bottle a couple of times to mix by turbulence and ensure large particles that settle at the bottom are re-suspended \cite{Mitchell2002}
+  \item Shake water sample bottle a couple of times to mix by turbulence and ensure large particles that settle at the bottom are re-suspended \citep{Mitchell2002}
   \item \label{item:place_filter} Using the forceps, place the filter on the filter base and place the filter cup on the base. 
   \item Pour the desired amount of water in a graduated cylinder
   \item \label{item:filtration} Turn the vacuum pump on and turn the knob $90^\circ$ to allow filtration. Once all the water pass through the filter, turn the know $90^\circ$ back and the turn the vacuum pump off. \textbf{Record volume filtered}
@@ -309,7 +309,7 @@ Notes:
 
 %*******************************
 \subsection{CDOM absorption coefficients}
-\todo{complete!}The spectral absorption coefficient are calculated as \cite{Mitchell2002}
+\todo{complete!}The spectral absorption coefficient are calculated as \citep{Mitchell2002}
 \begin{equation}
   a_g=2.303 \frac{(OD_s(\lambda)-OD_s(\lambda_{NIR}))}{l}~~[m^{-1}]
 \end{equation}
@@ -393,15 +393,15 @@ Notes:
 % ------------------------------
 \subsection{Chlorophyll-{\it a} concentration}
 
-Methods described by \cite{Lorenzen:1967fk} and \cite{Ritchie:2008eu}.
+Methods described by \citet{Lorenzen:1967fk} and \citet{Ritchie:2008eu}.
 % ------------------------------
 \subsubsection{Procedures}
-The procedures are described by \cite{Tyler2013_chl_protocol}.
+The procedures are described by \citet{Tyler2013_chl_protocol}.
 
 % ------------------------------
 \subsubsection{Calculations}
 
-The calculations used \cite{Lorenzen:1967fk} are:
+The calculations used \citep{Lorenzen:1967fk} are:
 
 \begin{equation}
   C_a = \frac{26.7(655_o - 665_a)\times v}{V\times l}
@@ -450,7 +450,7 @@ Note: concentrations are in $[mg/m^3]$ or $[\mu g/L]$.
 
  %*******************************
 \subsubsection{Calculations}
-From \cite{Tyler2013_SPM_protocol}:
+From \citet{Tyler2013_SPM_protocol}:
 
 \begin{equation}
 TSS = \frac{[final~filter~weight~(mg) - tare~filter~weight~(mg)]}{volume~filtered~(L)}~~~\left[\frac{mg}{L}\right]~or~\left[\frac{g}{m^3}\right]
