--- a/Objectives.tex
+++ b/Objectives.tex
@@ -14,7 +14,7 @@ The hypothesis addressed in this thesis is the following:
 
 { \bf ``The Landsat 8 sensor can be utilized to simultaneously quantify the concentration of the water color producing agents (CPAs) (i.e. chlorophyll-{\it a}, sediments, and colored dissolved organic matter (CDOM)) in fresh and coastal waters.''} 
 
-This leads to the goal of our work: to develop a process to retrieve water constituents (CPAs) from Landsat 8 imagery to evaluate this satellite's performance. Specifically, the algorithm will be used over Case 2 water, which includes fresh and coastal water. The retrieval algorithm compares a water leaving reflectance with unknown concentrations to water leaving reflectance whose concentrations are known. Because the comparison is made in the reflectance domain, the process first requires atmospherically correcting the Landsat 8 image and one approach was investigated to do so. The approach was the \acrfull{mobelm} algorithm \cite{Concha2014SPIE}.
+This leads to the goal of our work: to develop a process to retrieve water constituents (CPAs) from Landsat 8 imagery to evaluate this satellite's performance. Specifically, the algorithm will be used over Case 2 water, which includes fresh and coastal water. The retrieval algorithm compares a water leaving reflectance with unknown concentrations to water leaving reflectance whose concentrations are known. Because the comparison is made in the reflectance domain, the process first requires atmospherically correcting the Landsat 8 image and one approach was investigated to do so. The approach was the \acrfull{mobelm} algorithm \citep{Concha2014SPIE}.
 
 % -----------------------------------------------------------------
 \section{Statement of Objectives}
@@ -44,11 +44,11 @@ The successful completion of this research effort will be marked by completion o
 \begin{enumerate} 
 	{\bf \item To develop an over-water atmospheric correction algorithm for Landsat 8 reflective imagery.} 
 
-The first objective in this research is to identify the best approach to atmospherically correct the type of dataset provided by the OLI sensor. Two approaches were investigated. The first method is based on previous work done on simulated OLI data \cite{Gerace:2013,Gerace:2012,GeraceThesis,Pahlevan:2012} that consists of an \acrfull{elm}-based (ELM-based) method that combines the Landsat reflectance product (Landsat Surface Reflectance \acrshort{cdr};\cite{LandsatCDR}) and a physics-based numerical model for water (HydroLight;\cite{MobleyHEtech}) to determine both the bright and dark pixel reflectance. The second method is based on the methods developed for ocean color satellite based on \cite{Gordon:1994}. This method is based on the fact that the signal leaving the water does not contribute to the overall signal beyond the NIR part of the spectrum of light (black pixel assumption), so the signal reaching the sensor is caused only by atmospheric scattering. This concept can be expanded to the SWIR bands when the black pixel assumption is not valid in the NIR bands, which is the case for Case 2 and high productive Case 1 waters (\cite{Wang:2007}).
+The first objective in this research is to identify the best approach to atmospherically correct the type of dataset provided by the OLI sensor. Two approaches were investigated. The first method is based on previous work done on simulated OLI data \citep{Gerace:2013,Gerace:2012,GeraceThesis,Pahlevan:2012} that consists of an \acrfull{elm}-based (ELM-based) method that combines the Landsat reflectance product (Landsat Surface Reflectance \acrshort{cdr};\citep{LandsatCDR}) and a physics-based numerical model for water (HydroLight;\citep{MobleyHEtech}) to determine both the bright and dark pixel reflectance. The second method is based on the methods developed for ocean color satellite based on \citet{Gordon:1994}. This method is based on the fact that the signal leaving the water does not contribute to the overall signal beyond the NIR part of the spectrum of light (black pixel assumption), so the signal reaching the sensor is caused only by atmospheric scattering. This concept can be expanded to the SWIR bands when the black pixel assumption is not valid in the NIR bands, which is the case for Case 2 and high productive Case 1 waters \citep{Wang:2007}.
 
 	{\bf \item To design a water constituent concentration retrieval algorithm that can be applied to a specific study area.}
 
-The retrieval algorithm is based on previous work done by \cite{Raqueno:2003}, \cite{GeraceThesis}, and \cite{Pahlevan:2012}. The water-leaving reflectance product obtained after atmospheric correction from the previous stage is used as input to the retrieval algorithm. Each pixel of the reflectance product has an unknown concentration. A spectral matching technique is applied to predict this concentration by comparing the spectral shape of each pixel with the elements in a LUT. The spectral matching is made by a least square error minimization along with a trilinear interpolation. This utilizes a combination of \acrfull{rmse} and the non-linear optimization code ``lsqnonlin'' provided in the Optimization Toolbox of the MATLAB software \cite{MatlabHelp} to find the best match in a LUT of \gls{rrs} spectra. The output of this process is a concentration mapping for each water constituent.
+The retrieval algorithm is based on previous work done by \citet{Raqueno:2003}, \citet{GeraceThesis}, and \citet{Pahlevan:2012}. The water-leaving reflectance product obtained after atmospheric correction from the previous stage is used as input to the retrieval algorithm. Each pixel of the reflectance product has an unknown concentration. A spectral matching technique is applied to predict this concentration by comparing the spectral shape of each pixel with the elements in a LUT. The spectral matching is made by a least square error minimization along with a trilinear interpolation. This utilizes a combination of \acrfull{rmse} and the non-linear optimization code ``lsqnonlin'' provided in the Optimization Toolbox of the MATLAB software \citep{MatlabHelp} to find the best match in a LUT of \gls{rrs} spectra. The output of this process is a concentration mapping for each water constituent.
 
 The LUT is generated using the ``Case 2'' algorithm in HydroLight for different triplets of water constituent concentrations. In order to generate congruent result from HydroLight, the user needs to input IOPs characteristic of the water bodies to be studied. Consequently, IOPs measured spectrophotometrically in the lab from water samples from the field are used as input to HydroLight. These measurements were collected when the Landsat 8 sensor passed over the area of study.
 
@@ -77,7 +77,7 @@ Some contribution to the sensor-reaching signal could be potentially the reflect
 
 			{\bf \item To integrate with Hydrodynamics models.} 
 
-The next step would be to use the validated results from the retrieval process for training hydrodynamics models to predicts future behavior of the water bodies. This would be based on previous work by \cite{Pahlevan:2012} and \cite{GeraceThesis}, who used concentration maps obtained from the retrieval process using satellite imagery to train hydrodynamic models. For example, the hydrodynamic model would allow us to monitor the dynamics of coastal and inland waters near river discharges. The maps of water constituent concentrations on the surface can be used to feed into the hydrodynamic models in order to initiate and/or calibrate them. 
+The next step would be to use the validated results from the retrieval process for training hydrodynamics models to predicts future behavior of the water bodies. This would be based on previous work by \citet{Pahlevan:2012} and \citet{GeraceThesis}, who used concentration maps obtained from the retrieval process using satellite imagery to train hydrodynamic models. For example, the hydrodynamic model would allow us to monitor the dynamics of coastal and inland waters near river discharges. The maps of water constituent concentrations on the surface can be used to feed into the hydrodynamic models in order to initiate and/or calibrate them. 
 
 			{\bf \item To make the processes and algorithms more user friendly.} 
 
@@ -85,7 +85,7 @@ The retrieval process described here requires integration of different modules f
 
 			{\bf \item To investigate {\it in situ} AOPs and IOPs relationship to calculate backscattering.}
 
-In this study, the \gls{b_boverb} was determined by finding the best match for measured remote-sensing reflectances (\acrshort{rrs}) in a LUT of \gls{rrs} generated in Hydroligth with IOPs measured in field but varying the \gls{b_boverb}. The bio-optical measurements (i.e. absorption and scattering) combined with {\it in situ} \gls{rrs} could be used to have a better estimation of \gls{b_boverb}, and therefore, more representative LUTs. To accomplish this, an IOP-$R_{rs}$ inversion algorithm can be utilized \cite{Morel:1977rw,Lee2002_invQAA,Werdell2013_inv}.	
+In this study, the \gls{b_boverb} was determined by finding the best match for measured remote-sensing reflectances (\acrshort{rrs}) in a LUT of \gls{rrs} generated in Hydroligth with IOPs measured in field but varying the \gls{b_boverb}. The bio-optical measurements (i.e. absorption and scattering) combined with {\it in situ} \gls{rrs} could be used to have a better estimation of \gls{b_boverb}, and therefore, more representative LUTs. To accomplish this, an IOP-$R_{rs}$ inversion algorithm can be utilized \citep{Morel:1977rw,Lee2002_invQAA,Werdell2013_inv}.	
 
 	\end{enumerate}	
 
